misc cleanup, added URI getDocumentation(), Collection getDocumentation is now gone